// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`count and total 0 expenses 1`] = `
<div>
  Viewing 
  0
   
  expenses
   totalling 
  £0.00
   
</div>
`;

exports[`count and total 1 expense 1`] = `
<div>
  Viewing 
  1
   
  expense
   totalling 
  £1.25
   
</div>
`;

exports[`count and total 2 expenses 1`] = `
<div>
  Viewing 
  2
   
  expenses
   totalling 
  £2.25
   
</div>
`;
